Ejemplos de ciclos

--- a/javascript/primer_proyecto/index.html
+++ b/javascript/primer_proyecto/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
   <h2>Introducción a Javascript</h2>
-  <script src="mi_script.js"></script>
+  
+  <!-- <script src="mi_script.js"></script> -->
+  <script src="ciclos.js"></script>
 </body>
 </html>
